fixed content center alignment

--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ h3 {
 .container {
   /* padding-inline: 30px; */
   padding-block: 10px;
+
+  width: min(70rem, 100% - 4rem);
+  margin-inline: auto;
 }
 
 @media (min-width: 50rem) {
@@ -80,7 +83,7 @@ h3 {
     width: min(70rem, 100% - 8rem);
     /* margin-left: auto;
       margin-right: auto; */
-    margin-inline: 30px;
+    margin-inline: auto;
 
     padding-block: 10px;
   }
@@ -337,7 +340,7 @@ h1 {
 #skills li {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 1px;
 }
 
 #skills li img {
